--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -26,6 +26,9 @@
         // If your framework is older than .NET Core 3.0, reference Newtonsoft.Json library,
         // and call JsonConvert.SerializeObject() instead of JsonSerializer.Serialize()
         //
+        /*
+         JsonSerializer.Serialize(Model.Customers) -> {&quot;Id&quot;:1,&quot;FirstName&quot;:&quot;Hasim&quot;,&quot;LastName&quot;:&quot;Santello&quot;,&quot;DOB&quot;:&quot;2/09/2004&quot;}
+         */
         var customers = JSON.parse('@Html.Raw(JsonSerializer.Serialize(Model.Customers))');
         // 
         // Cross-Site Scripting (XSS) vulnerability Warning!
